# Sensory-Driven-Vision-Based-Control-for-Robotic-Manipulation

./: Dockerfile  FIX_EXPLANATION.md  IMPLEMENTATION_SUMMARY.txt  MPC_ARCHITECTURE_DIAGRAM.py  MPC_COMPLETION_REPORT.md  MPC_FIXED_GUIDE.md  MPC_FIX_SUMMARY.md  MPC_IMPLEMENTATION.md  MPC_QUICKSTART.md  README.md  README_MPC.md  REPORT.md  mpc_execution_task.md  mpc_obstacle_execution_task.md
catkin_ws/: mpc_results_20260118_115012.csv  performance_results_20260114_143446.csv  performance_results_20260114_151448.csv  performance_results_20260118_200546.csv  performance_results_arm_20260119_065432.csv  performance_results_mpc_20260119_020109.csv  performance_results_mpc_20260119_065433.csv
catkin_ws/devel/: .catkin
catkin_ws/devel/.private/gazebo_ros_link_attacher/: local_setup.fish
catkin_ws/devel/.private/levelManager/: .catkin  local_setup.fish  local_setup.sh
catkin_ws/devel/.private/motion_planning/: .catkin  local_setup.sh  setup.sh
catkin_ws/devel/.private/robotName_description/: .catkin  local_setup.fish
catkin_ws/devel/.private/robot_state_publisher/: .catkin
catkin_ws/devel/.private/robotiq_description/: .catkin  setup.fish
catkin_ws/devel/.private/robotiq_gazebo/: .catkin  .rosinstall
catkin_ws/devel/.private/universal_robot/: .catkin  setup.sh
catkin_ws/logs/vision/: build.cmake.000.log.stderr
catkin_ws/src/gazebo_ros_link_attacher/: CMakeLists.txt
catkin_ws/src/gazebo_ros_link_attacher/srv/: Attach.srv
catkin_ws/src/results/: generate_report.py  plot_results.py
catkin_ws/src/vision/: CMakeLists.txt  CMakeLists.txt.save
(+276 files in other folders)
